[gd_scene load_steps=9 format=3 uid="uid://c3qaut3rpoyrt"]

[ext_resource type="Script" uid="uid://3rrq2j8s5yar" path="res://bullets/enemy_bullet.gd" id="1_v5fu0"]
[ext_resource type="Texture2D" uid="uid://bweg3w60dlxti" path="res://bullets/bullet.png" id="2_3il18"]
[ext_resource type="Material" uid="uid://shc44r0efrv4" path="res://shared/materials/bullet_smoke.tres" id="4_uy0w8"]
[ext_resource type="PackedScene" uid="uid://cpkxmkaq2v6yg" path="res://shared/smoke.tscn" id="4_v5fu0"]
[ext_resource type="AudioStream" uid="uid://c0s7a26nuis8g" path="res://external_assets/dklon/boom2.wav" id="5_3il18"]
[ext_resource type="PackedScene" uid="uid://xfkwh310tgd2" path="res://shared/hit_explosions.tscn" id="5_c0w2n"]
[ext_resource type="Material" uid="uid://cxmddp7425602" path="res://shared/materials/bullet_explosions.tres" id="6_xcksc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sjpon"]
radius = 7.28011

[node name="EnemyBullet" type="Area2D"]
collision_layer = 8
script = ExtResource("1_v5fu0")
speed = 500.0
color = Color(0.764706, 0.0470588, 0.843137, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_3il18")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sjpon")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Smoke" parent="." instance=ExtResource("4_v5fu0")]
unique_name_in_owner = true
process_material = ExtResource("4_uy0w8")

[node name="Explosions" parent="." instance=ExtResource("5_c0w2n")]
unique_name_in_owner = true
process_material = ExtResource("6_xcksc")

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_3il18")
volume_db = 5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
